Add site system endpoint
